syntax = "proto3";

package ratingService;

service RatingService {
    rpc getRatingFactorByZip (Zip) returns (RatingFactor) {};
}

message Zip {
    string zip = 1;
}

message RatingFactor {
    double ratingFactor = 1;
}